# api/routes/events.js
@@ -2,7 +2,7 @@ const controller = require('../controllers/events');
 const { validateToken } = require('../lib/utils');
 
 module.exports = (router) => {
-  router.route('/drink')
+  router.route('/event')
     .get(validateToken, controller.read)
     .post(validateToken, controller.create);
 };
